# hyni_websocket

./: CMakeLists.txt  README.md
cmake/: hyni_websocket_serverConfig.cmake.in
src/: hyni_audio_data.h  hyni_websocket_server.cpp  hyni_websocket_server.h
tests/: test_websocket_server.cpp  test_websocket_server_command.cpp
